# flox-connectors

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DISCLAIMER  README.md
.github/workflows/: bump-flox-submodule.yml  ci.yml
include/flox-connectors/bitget/: authenticated_rest_client.h  bitget_exchange_connector.h  bitget_order_executor.h
include/flox-connectors/bybit/: authenticated_rest_client.h  bybit_exchange_connector.h  bybit_order_executor.h
include/flox-connectors/execution/: executor_policies.h  timeout_order_tracker.h
include/flox-connectors/hyperliquid/: hl_signer.h  hyperliquid_exchange_connector.h  hyperliquid_order_executor.h
include/flox-connectors/net/: curl_session_pool.h  curl_transport.h  ix_websocket_client.h
include/flox-connectors/polymarket/: polymarket_config.h  polymarket_exchange_connector.h  polymarket_ffi.h  polymarket_order_executor.h
include/flox-connectors/util/: rate_limit_config.h  safe_parse.h
src/bitget/: authenticated_rest_client.cpp  bitget_exchange_connector.cpp  bitget_order_executor.cpp
src/bybit/: authenticated_rest_client.cpp  bybit_exchange_connector.cpp  bybit_order_executor.cpp
src/execution/: timeout_order_tracker.cpp
src/hyperliquid/: hl_signer.cpp  hyperliquid_exchange_connector.cpp  hyperliquid_order_executor.cpp
src/net/: curl_session_pool.cpp  curl_transport.cpp  ix_websocket_client.cpp
src/polymarket/: polymarket_exchange_connector.cpp  polymarket_order_executor.cpp
src/polymarket/ffi/: Cargo.toml
src/polymarket/ffi/src/: lib.rs
tests/: CMakeLists.txt  integration_test_bitget.cpp  integration_test_bybit.cpp  integration_test_hyperliquid.cpp  test_bybit.cpp
utils/: hl_signerd.py
